Cambiando la fecha

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       drwxr-xr-x &nbsp;2 fsegarra fsegarra 4096 oct 2 &nbsp;2012
       <a href="https://github.com/SegarraFacundo">github</a>
       <br>
-      drwxr-xr-x 3 fsegarra fsegarra 4096 dic 5 &nbsp;2017
+      drwxr-xr-x &nbsp;3 fsegarra fsegarra 4096 dic 5 &nbsp;2017
       <a href="https://www.linkedin.com/in/facundo-segarra-920317b7">linkedin</a>
       <br>
       drwxr-xr-x &nbsp;3 fsegarra fsegarra 4096 ene 2 20:20
       <a href="https://hub.docker.com/u/fsegarra">dockerhub</a>
       <br>
-      -rwxr-xr-x  &nbsp;6 fsegarra fsegarra 4096 mar 6 22:20
+      -rwxr-xr-x &nbsp;6 fsegarra fsegarra 4096 mar 6 22:20
       <a href="cv.pdf">yo</a>
       <br>
     </code>
